--- a/index.html
+++ b/index.html
@@ -159,11 +159,11 @@
 
 <div id="controls-help">
   <b>Controls:</b><br>
-  <span class="key">W</span> / <span class="key">S</span> - Throttle (Hold W)<br>
-  <span class="key">A</span> - Afterburner (Hold)<br>
-  <span class="key">Space</span> - Air Brake / Wheel Brakes<br>
-  <span class="key">G</span> - Toggle Landing Gear<br>
-  Arrows - Pitch/Roll & Steering<br>
+  <span class="key">W</span> / <span class="key">S</span> - Throttle <br>
+  <span class="key">A</span> - Afterburner <br>
+  <span class="key">Space</span> - Air Brake / Brake<br>
+  <span class="key">G</span> - Landing Gear<br>
+  Arrows - Pitch/Roll <br>
   <span class="key">Q</span> / <span class="key">E</span> - Rudder<br>
   <i>Hold Down Arrow at 110kts to Fly</i>
 </div>
